--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -242,5 +242,11 @@
                 android:text="UPDATE 2017.12.xx" />
         </LinearLayout>
 
+        <Button
+            android:id="@+id/buttonToSetting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="toSettings" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
